Issue #3072279 by oknate, Wim Leers: Stop generating align-* classes for preview in DrupalMedia CKEditor plugin

--- a/core/modules/media/css/plugins/drupalmedia/ckeditor.drupalmedia.css
+++ b/core/modules/media/css/plugins/drupalmedia/ckeditor.drupalmedia.css
@@ -30,3 +30,14 @@ drupal-media {
 drupal-media .media-library-item__edit {
   right: 10px;
 }
+
+/**
+ * Allow alignment to display in CKEditor.
+ */
+drupal-media[data-align=left],
+drupal-media[data-align=right] {
+  display: inline;
+}
+drupal-media[data-align=center] {
+  display: flex;
+}
